# sone

./: .gitignore  README.md  draft-types.rs  eslint.config.js  flake.nix  knip.json  miniplayer.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  playback_issue.md  question.md
.github/workflows/: flathub-update.yml  fmt.yml  format-check.yml
build-scripts/: publish-cloudsmith.sh
build-scripts/test/: rpm.sh
data/: io.github.lullabyX.sone.desktop  io.github.lullabyX.sone.metainfo.xml
nix/: package.nix
snap/: snapcraft.yaml
src/: App.css  App.tsx  miniplayer-main.tsx  miniplayer.css  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cache.rs  crypto.rs  discord.rs  embedded_config.rs  error.rs  idle_inhibit.rs  lib.rs  logging.rs  main.rs  mpris.rs  pipeline_probe.rs  signal_path.rs  tidal_api.rs  tray.rs
src-tauri/src/commands/: auth.rs  library.rs  mcp.rs  metadata.rs  mod.rs  pages.rs  playback.rs  profile.rs  scrobble.rs  search.rs  updates.rs  utility.rs
src-tauri/src/idle_inhibit/: dbus.rs  mod.rs  wayland.rs  x11.rs
src-tauri/src/mcp/: events.rs  mod.rs  sanitizer.rs  server.rs  state_mirror.rs
src-tauri/src/mcp/tools/: catalog.rs  favorites.rs  mod.rs  playback.rs  playlists.rs  state.rs  util.rs
src-tauri/src/playback_report/: event.rs  mod.rs  session.rs
src-tauri/src/scrobble/: lastfm.rs  listenbrainz.rs  mod.rs  musicbrainz.rs  queue.rs
src-tauri/tests/: gapless_probe.py
src/api/: tidal.ts
src/atoms/: auth.ts  favorites.ts  mcp.ts  playback.ts  playlists.ts  theme.ts  ui.test.ts  ui.ts  updates.ts
src/components/: AboutModal.tsx  AddToPlaylistMenu.tsx  AlbumView.tsx  AppInitializer.tsx  ArtistPage.tsx  ArtistTracksPage.tsx  AvatarCropper.tsx  BioText.tsx  CardScrollSection.tsx  CoverBanner.tsx  CrossfadeTidalImage.tsx  DebouncedFilterInput.tsx  ErrorBoundary.tsx  ExplicitBadge.tsx  ExplorePage.tsx  ExploreSubPage.tsx  FavoritesView.tsx  FolderContextMenu.tsx  Header.tsx  Home.tsx  HomeSection.tsx  Layout.tsx  LibraryViewAll.tsx  Login.tsx  LovedTracksBanner.tsx  MaximizedPlayer.tsx  MediaCard.tsx  MediaContextMenu.tsx  MediaGrid.tsx  MenuPortal.tsx  MiniPlayer.tsx  MixPage.tsx  MoveToFolderMenu.tsx  NotFoundPage.tsx  NowPlayingDrawer.tsx  PageContainer.tsx  PageSkeleton.tsx  PlayerBar.test.tsx  PlayerBar.tsx  PlaylistView.tsx  (+36 more)
src/constants/: sortOptions.ts
src/contexts/: ToastContext.tsx
src/hooks/: useAudio.ts  useAuth.logout.test.tsx  useAuth.ts  useContextMenu.ts  useDrawer.ts  useFavorites.ts  useFolders.ts  useGaplessPrefetch.ts  useInfiniteScroll.ts  useMcpBridge.ts  useMediaPlay.ts  useMiniplayerBridge.ts  useMiniplayerEmitter.ts  useMiniplayerWindow.ts  useNavigation.test.tsx  useNavigation.ts  usePlaybackActions.test.tsx  usePlaybackActions.ts  usePlaylists.ts  useProgressScrub.ts  useShortcuts.ts  useSignalPathRefresh.ts  useTheme.ts  useViewTab.ts
src/lib/: cropImage.test.ts  cropImage.ts  errorUtils.ts  gaplessPredict.test.ts  gaplessPredict.ts  lrc.ts  playbackPosition.test.ts  playbackPosition.ts  playbackSource.test.ts  playbackSource.ts  shortcuts.ts  socialLinks.test.ts  socialLinks.ts  theme.ts  tidalUrl.ts  trackAvailability.ts  updateToast.ts  (+1 more)
(+20 files in other folders)
